<?xml version="1.0"?>
<package format="2">
  <name>kitti_to_rosbag</name>
  <version>0.0.0</version>
  <description>A set of tools for parsing KITTI into ROS messages and outputting them as ROS bag files (or merged pointclouds).</description>

  <author email="helen.oleynikova@mavt.ethz.ch">Helen Oleynikova</author>

  <maintainer email="helen.oleynikova@mavt.ethz.ch">Helen Oleynikova</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>cv_bridge</depend>
  <depend>gflags_catkin</depend>
  <depend>image_transport</depend>
  <depend>minkindr</depend>
  <depend>minkindr_conversions</depend>
  <depend>pcl_conversions</depend>
  <depend>pcl_ros</depend>
  <depend>sensor_msgs</depend>
  <depend>tf</depend>
  <depend>rosbag</depend>
</package>
